--- a/src/PostsBundle/Resources/views/comment/index.html.twig
+++ b/src/PostsBundle/Resources/views/comment/index.html.twig
@@ -37,7 +37,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('comment_new') }}">Create a new comment</a>
+            {#{{ render(controller('PostsBundle:Comment:new')) }}#}
         </li>
     </ul>
 {% endblock %}
