--- a/src/PostsBundle/Resources/views/comment/new.html.twig
+++ b/src/PostsBundle/Resources/views/comment/new.html.twig
@@ -1,12 +1,14 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Comment creation</h1>
+    <h1>Add comment for post#{{ comment.post.id }}</h1>
 
-    {{ form_start(form) }}
+    {#{{ form_start(form) }}
         {{ form_widget(form) }}
         <input type="submit" value="Create" />
-    {{ form_end(form) }}
+    {{ form_end(form) }}#}
+
+    {% include 'PostsBundle:comment:form.html.twig' with {'form':form} %}
 
     <ul>
         <li>
