--- a/src/PostsBundle/Resources/views/post/show.html.twig
+++ b/src/PostsBundle/Resources/views/post/show.html.twig
@@ -17,20 +17,14 @@
     </div>
 
 
-
-
-
-    {{ go.goto_button( path('post_index'), 'goHome') }}
-    {{ go.goto_button("", "goEdit") }}
-
-
-
     <a href="{{ path('post_index') }}" class="pure-button pure-button-primary">Go index</a>
-    <a href="{{ path('post_edit', { 'id': post.id }) }}" class="pure-button pure-button-primary">Edit</a>
+    {#<a href="{{ path('post_edit', { 'id': post.id }) }}" class="pure-button pure-button-primary">Edit</a>
     {{ form(delete_form) }}
     <input class="pure-button pure-button-primary" type="submit" value="Delete">
-    {{ form_end(delete_form) }}
+    {{ form_end(delete_form) }}#}
 
 
     {{ include('@Posts/comment/index.html.twig', {'comments':comments} ) }}
+
+    {{ render(controller('PostsBundle:Comment:new',{'post_id':post.id})) }}
 {% endblock %}
