--- a/src/PostsBundle/Resources/views/comment/show.html.twig
+++ b/src/PostsBundle/Resources/views/comment/show.html.twig
@@ -10,8 +10,12 @@
                 <td>{{ comment.id }}</td>
             </tr>
             <tr>
-                <th>Title</th>
-                <td>{{ comment.title }}</td>
+                <th>Id</th>
+                <td>{{ comment.id }}</td>
+            </tr>
+            <tr>
+                <th>Author</th>
+                <td>{{ comment.author }}</td>
             </tr>
             <tr>
                 <th>Text</th>
