--- a/src/PostsBundle/Resources/views/post/new.html.twig
+++ b/src/PostsBundle/Resources/views/post/new.html.twig
@@ -1,16 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Post creation</h1>
+    <h2>Post creation</h2>
 
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
-    {{ form_end(form) }}
+    {% include 'PostsBundle:post:form.html.twig' with {'form':form} %}
 
-    <ul>
-        <li>
-            <a href="{{ path('post_index') }}">Back to the list</a>
-        </li>
-    </ul>
 {% endblock %}
