--- a/src/UserBundle/Resources/views/layout.html.twig
+++ b/src/UserBundle/Resources/views/layout.html.twig
@@ -1,3 +1,4 @@
+{%  extends '::base.html.twig' %}
 {% block body %}
         <div>
             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
@@ -5,8 +6,10 @@
                 <a href="{{ path('fos_user_security_logout') }}">
                     {{ 'layout.logout'|trans({}, 'FOSUserBundle') }}
                 </a>
-            {% else %}
-                <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>
+                {# добавляет ссылку на форму авторизции
+                {% else %}
+                <a href="{{ path('fos_user_security_login') }}">{{ 'layout.login'|trans({}, 'FOSUserBundle') }}</a>#}
+
             {% endif %}
         </div>
 
