--- a/src/PostsBundle/Resources/views/post/form.html.twig
+++ b/src/PostsBundle/Resources/views/post/form.html.twig
@@ -1,4 +1,5 @@
 {{ form_start(form,{ 'action': path('post_new'), 'method': 'POST'}) }}
-        {{ form_widget(form) }}
-<input type="submit" value="Create"/>
+    {{ form_widget(form) }}
+    {{ form_row(fileForm.file) }}
+    <input type="submit" value="Create"/>
 {{ form_end(form) }}
