add a images to the Posts

--- a/src/PostsBundle/Resources/views/post/new.html.twig
+++ b/src/PostsBundle/Resources/views/post/new.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <h2>Post creation</h2>
 
-    {% include 'PostsBundle:post:form.html.twig' with {'form':form, 'fileForm': fileForm} %}
+    {% include 'PostsBundle:post:form.html.twig' with {'form':form} %}
 
 
 {% endblock %}
