--- a/src/PostsBundle/Resources/views/post/index.html.twig
+++ b/src/PostsBundle/Resources/views/post/index.html.twig
@@ -41,12 +41,18 @@
                 <div class="post">
                     <span><a href="{{ path('post_show', { 'id': post.id }) }}">{{ post.id }}</a></span>
                     <span><s>{{ post.author }}</s></span>
-                    <span >{{ post.title }}</span>
-                    
-                    <p>{{ post.text }}</p>
+                    <span>{{ post.title }}</span>
 
+                    <p>{{ post.text }}</p>
+                    {% if post.image is not null %}
+                    <span>
+                            <a href="{{ absolute_url(asset("uploads/files/"~ post.image)) }}">{{ post.image }}</a></span>
+                    <br/>
+                    <img src="{{ asset("uploads/files/"~ post.image) }}" width="20%" height="20%">
+                    {% endif %}
                     {#<a href="{{ path('post_edit', { 'id': post.id }) }}" class="pure-button pure-button-primary">edit</a>#}
-                    <a href="{{ path('post_show', { 'id': post.id }) }}" class="pure-button pure-button-primary">show</a>
+                    <a href="{{ path('post_show', { 'id': post.id }) }}"
+                       class="pure-button pure-button-primary">show</a>
 
                 </div>
             </li>
