--- a/src/PostsBundle/Resources/views/post/show.html.twig
+++ b/src/PostsBundle/Resources/views/post/show.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 {% import ':default:macro.html.twig' as go %}
 {% block body %}
+
     <div class="layout">
         <h1>Post</h1>
 
@@ -12,12 +13,21 @@
                 <span>{% if post.createAt %}{{ post.createAt|date('Y-m-d H:i:s') }}{% endif %}</span>
                 <br/>
                 <p>{{ post.text }}</p>
+
+                {# todo: вынести в отельнй подключаемы файл#}
+                {% if post.image is not null %}
+
+                <span>
+                 <a href="{{ absolute_url(asset("uploads/files/"~ post.image)) }}">{{ post.image }}</a></span>
+                <br/>
+                <img src="{{ asset("uploads/files/"~ post.image) }}" width="20%" height="20%">
+                {% endif %}
             </div>
         </div>
     </div>
 
 
-    <a href="{{ path('post_index') }}" class="pure-button pure-button-primary">Go index</a>
+    <a href="{{ path('post_index') }}" class="pure-button pure-button-primary">Go to index</a>
     {#<a href="{{ path('post_edit', { 'id': post.id }) }}" class="pure-button pure-button-primary">Edit</a>
     {{ form(delete_form) }}
     <input class="pure-button pure-button-primary" type="submit" value="Delete">
