--- a/src/PostsBundle/Resources/views/comment/index.html.twig
+++ b/src/PostsBundle/Resources/views/comment/index.html.twig
@@ -22,6 +22,14 @@
                 <td>{{ comment.title }}</td>
                 <td>{{ comment.text }}</td>
                 <td>{% if comment.createAt %}{{ comment.createAt|date('Y-m-d H:i:s') }}{% endif %}</td>
+                <td>{% if comment.image is not null %}
+                        <span>
+                            <a href="{{ absolute_url(asset("uploads/files/"~ comment.image)) }}">{{ comment.image }}</a></span>
+                        <br/>
+                        <img src="{{ asset("uploads/files/"~ comment.image) }}" width="20%" height="20%">
+                    {% endif %}
+                </td>
+
                 <td>
                     <ul>
                         <li>
