fix extendig in tamplates

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,11 +1,7 @@
-
+{% extends '::base.html.twig' %}
 {% block body %}
     {{ render(controller('FOSUserBundle:Security:login')) }}
 
-    {#<div id="welcome">
-        <h1>Welcome to my Project</h1>
-    </div>
-#}
     <p>
         Я не могу в верстку и стили.
     </p>
