--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,8 +13,7 @@
 <body>
 
 <div class="container">
-    <div class="page-header"><h1>My project</h1>
-
+    <div class="page-header"><h1>My project</h1></div>
         {% block body %}{% endblock %}
 </div>
 
