--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,14 +11,50 @@
 
 </head>
 <body>
-
 <div class="container">
-    <div class="page-header"><h1>My project</h1></div>
-        {% block body %}{% endblock %}
-</div>
+    <div class="row">
+        <h1>Site name.</h1>
+    </div>
+    <div class="navbar navbar-inverse">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#responsive-menu">Kek
+                </button>
+            </div>
+            <a class="navbar-brand" href="#"><img
+                        src="{{ asset('uploads/files/2cf1065e98e946187e55acbaf110c1e9.jpeg') }}" width="25px"
+                        height="25px"></a>
+            <div id="responsive-menu" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="#">Пункт 1</a></li>
+                    <li><a href="#">Пункт 2</a></li>
+                    <li><a href="#">Пункт 3</a></li>
+                    <li><a href="#">Пункт 4</a></li>
 
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-{% block javascripts %}{% endblock %}
+                </ul>
+
+                {{ render(controller('FOSUserBundle:Security:login')) }}
+
+
+
+            </div>
+
+        </div>
+    </div>
+
+    <div class="container">
+
+
+        {% block body %}{% endblock %}
+    </div>
+
+
+    <!-- Latest compiled and minified JavaScript -->
+
+    {% block javascripts %}
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+                crossorigin="anonymous"></script>
+    {% endblock %}
 </body>
 </html>
