--- a/src/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/UserBundle/Resources/views/Security/login.html.twig
@@ -1,5 +1,39 @@
 {% extends "@FOSUser/layout.html.twig" %}
+{% trans_default_domain 'FOSUserBundle' %}
 
 {% block fos_user_content %}
-    {{ include('@FOSUser/Security/login_content.html.twig') }}
+    {#{{ include('@FOSUser/Security/login_content.html.twig') }}#}
+
+    {% if error %}
+        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    {% endif %}
+
+    {% if not is_granted('IS_AUTHENTICATED_FULLY') %}
+        <form class="navbar-form navbar-right" action="{{ path("fos_user_security_check") }}" method="post">
+
+            <input type="hidden" name="_csrf_token" value="{{ csrf_token }}"/>
+
+            <div class="form-group">
+                <label for="username">{{ 'security.login.username'|trans }}</label>
+                <input class="form-control" type="text" id="username" name="_username" value="{{ last_username }}"
+                       required="required"/>
+            </div>
+
+            <div class="form-group">
+                <label for="password">{{ 'security.login.password'|trans }}</label>
+                <input class="form-control" type="password" id="password" name="_password" required="required"/>
+            </div>
+
+            <div class="checkbox">
+                <input type="checkbox" id="remember_me" name="_remember_me" value="on"/>
+                <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+            </div>
+
+            <input type="submit"
+                   class="btn btn-primary"
+                   id="_submit"
+                   name="_submit"
+                   value="{{ 'security.login.submit'|trans }}"/>
+        </form>
+    {% endif %}
 {% endblock fos_user_content %}
