rewrite header template

--- a/src/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/UserBundle/Resources/views/Security/login.html.twig
@@ -17,12 +17,10 @@
                 <label for="username">{{ 'security.login.username'|trans }}</label>
                 <input class="form-control" type="text" id="username" name="_username" value="{{ last_username }}"
                        required="required"/>
-            </div>
 
-            <div class="form-group">
                 <label for="password">{{ 'security.login.password'|trans }}</label>
                 <input class="form-control" type="password" id="password" name="_password" required="required"/>
-            </div>
+
 
             <div class="checkbox">
                 <input type="checkbox" id="remember_me" name="_remember_me" value="on"/>
@@ -34,6 +32,12 @@
                    id="_submit"
                    name="_submit"
                    value="{{ 'security.login.submit'|trans }}"/>
+
+                <a href="{{ path('fos_user_registration_register') }}"
+                   class="btn btn-primary"
+                   type="submit"
+                   >Register</a>
+            </div>
         </form>
     {% endif %}
 {% endblock fos_user_content %}
