--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -9,11 +9,9 @@
     </p>
 
 
-    <div>
-        <h2>What's next?</h2>
-        <a href="{{ path('post_index') }}">Просмотреть все посты.</a>
-    </div>
-
+        <h1 class="display-3">Что дальше?</h1>
+        <a href="{{ path('post_index') }}" class="btn btn-primary">Просмотреть все посты!</a>
+    {{ render(controller('PostsBundle:Subject:index')) }}
     <h3>Написать свой.</h3>
     {{ render(controller('PostsBundle:Post:new')) }}
 {% endblock %}
