--- a/src/PostsBundle/Resources/views/post/new.html.twig
+++ b/src/PostsBundle/Resources/views/post/new.html.twig
@@ -1,6 +1,6 @@
 {% block body %}
     <h2>Post creation</h2>
 
-    {% include 'PostsBundle:post:form.html.twig' with {'form':form} %}
+    {% include 'PostsBundle:post:form.html.twig' with {'form':form, 'subj': subj} %}
 
 {% endblock %}
