--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -8,50 +8,50 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         {#<link rel="stylesheet" href='{{ asset('css/blog.css') }}'>#}
     {% endblock %}
-
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#responsive-menu">
-                </button>
-            </div>
-            <a class="navbar-brand" href="#"><img
-                        src="{{ asset('uploads/files/2cf1065e98e946187e55acbaf110c1e9.jpeg') }}" width="25px"
-                        height="25px"></a>
-            <div class="collapse navbar-collapse" id="responsive-menu">
-                <ul class="nav navbar-nav mr-auto">
-                    <li><a href="{{ path('homepage') }}">Home</a></li>
-                    <li><a href="{{ path('post_index') }}">All posts</a></li>
-                    <li><a href="#">Пункт 3</a></li>
-                    <li><a href="#">Пункт 4</a></li>
 
-                </ul>
-                {{ render(controller('FOSUserBundle:Security:login')) }}
-            </div>
-
+<nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#responsive-menu">
+            </button>
         </div>
-    </nav>
+        <a class="navbar-brand" href="#"><img
+                    src="{{ asset('uploads/files/2cf1065e98e946187e55acbaf110c1e9.jpeg') }}" width="25px"
+                    height="25px"></a>
+        <div class="collapse navbar-collapse" id="responsive-menu">
+            <ul class="nav navbar-nav mr-auto">
+                <li><a href="{{ path('homepage') }}">Home</a></li>
+                <li><a href="{{ path('post_index') }}">All posts</a></li>
+                <li><a href="#">Пункт 3</a></li>
+                <li><a href="#">Пункт 4</a></li>
 
-    <div class="container">
+            </ul>
+            {{ render(controller('FOSUserBundle:Security:login')) }}
+        </div>
 
-
-        {% block body %}{% endblock %}
-        <hr>
-        <footer>
-            <p>© Company Dimas 2017</p>
-        </footer>
     </div>
+</nav>
+
+<div class="container">
 
 
+    {% block body %}{% endblock %}
+    {% block javascripts %}{% endblock %}
 
-    <!-- Latest compiled and minified JavaScript -->
+    <hr>
+    <footer>
+        <p>© Company Dimas 2017</p>
+    </footer>
+</div>
 
-    {% block javascripts %}
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-                integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-                crossorigin="anonymous"></script>
-    {% endblock %}
+
+<!-- Latest compiled and minified JavaScript -->
 </body>
+
 </html>
