--- a/src/PostsBundle/Resources/views/post/index.html.twig
+++ b/src/PostsBundle/Resources/views/post/index.html.twig
@@ -4,63 +4,59 @@
 
     <h1>Posts list</h1>
 
-    {#<table>
-        <thead>
-        <tr>
-            <th>Id</th>
-            <th>Autor</th>
-            <th>Title</th>
-            <th>Text</th>
-        </tr>
-        </thead>
-    </table>#}
-    <div class="well">
-        {% set post = posts.iterator.current %}
-        {% for post in posts %}
+    {# POST START #}
+    {% if posts is not empty %}
+        <div class="well">
+            {% for post in posts %}
 
-            <div class="media">
-                {% if post.image is not null %}
-                    <a class="pull-left" href="{{ absolute_url(asset("uploads/files/"~ post.image)) }}">
-                        <img class="media-object" src="{{ asset("uploads/files/"~ post.image) }}" width="170px"
-                             height="150px">
-                    </a>
+                <div class="media">
+                    {% if post.image is not null %}
+                        <a class="pull-left" href="{{ absolute_url(asset("uploads/files/"~ post.image)) }}">
+                            <img class="media-object" src="{{ asset("uploads/files/"~ post.image) }}" width="170px"
+                                 height="150px">
+                        </a>
+                    {% endif %}
+                    <div class="media-body">
+                        <h4 class="media-heading">{{ post.title }}</h4>
+                        <span><a href="{{ path('post_show', { 'id': post.id }) }}">{{ post.id }}</a></span>
+                        <span class="text-right">{{ post.author }}</span>
+                        <p>{{ post.text }}</p>
+                        <ul class="list-inline list-unstyled">
+                            <li>
+                                <span><i class="glyphicon glyphicon-calendar"></i>{{ post.createAt|date('Y-m-d H:i:s') }}</span>
+                            </li>
+                            <li>|</li>
+                            <span><i class="glyphicon glyphicon-comment"></i> 000 comments</span>
+                            <li>|</li>
+                            <li><a href="{{ path('post_show', { 'id': post.id }) }}"
+                                   class="">show</a>
+                            <li>
+                        </ul>
+                    </div>
 
-                {% endif %}
-                <div class="media-body">
-                    <h4 class="media-heading">{{ post.title }}</h4>
-                    <span><a href="{{ path('post_show', { 'id': post.id }) }}">{{ post.id }}</a></span>
-
-                    <span class="text-right">{{ post.author }}</span>
-                    <p>{{ post.text }}</p>
-                    <ul class="list-inline list-unstyled">
-                        <li>
-                            <span><i class="glyphicon glyphicon-calendar"></i>{{ post.createAt|date('Y-m-d H:i:s') }}</span>
-                        </li>
-                        <li>|</li>
-                        <span><i class="glyphicon glyphicon-comment"></i> 000 comments</span>
-                        <li>|</li>
-                        <li><a href="{{ path('post_show', { 'id': post.id }) }}"
-                               class="">show</a>
-                        <li>
-                    </ul>
                 </div>
+                <hr>
 
-            </div>
-            <hr>
+            {% endfor %}
+        </div>
 
-        {% endfor %}
-    </div>
-
-
-    {# Render each page number #}
-    {% for i in 1..(maxPages/5)| round(0, 'ceil') %}
-        <span>
+        {# PAGINATION #}
+        {# Render each page number #}
+        {% for i in 1..(maxPages/5)| round(0, 'ceil') %}
+            <span>
             <a href="{{ path('post_index', {currentPage: i}) }}">{{ i }}</a>
         </span>
-    {% endfor %}
+        {% endfor %}
+
+    {% else %}
+        <h2>Постов еще нет!!!</h2>
+
+    {% endif %}
+    {# POSTS END#}
+
     {#
     <h2>subg:: {{ subj.subject.subjName }}</h2>
     #}
-    {{ render(controller('PostsBundle:Post:new',{'subj': post.subject.subjName  })) }}
+    {{ render(controller('PostsBundle:Post:new',{'subj': subj  })) }}
     {#{{ render(controller('PostsBundle:Post:form')) }}#}
 {% endblock %}
