Create delete forms bulider in JSON format

--- a/src/AdminBundle/Resources/views/Default/index.html.twig
+++ b/src/AdminBundle/Resources/views/Default/index.html.twig
@@ -12,7 +12,7 @@
         <h2>Page: {{ "{{ currentPage }}" }}.</h2></p>
         <hr>
         <h3>Тестовый стенд.</h3>
-        <div  v-html="test.data"></div>
+        <div  v-html="test.dataJ"></div>
         <hr>
         <div v-for="post in posts">
             <div>{{ '{{ post.id }}' }}</div>
