--- a/src/PostsBundle/Resources/views/comment/show.html.twig
+++ b/src/PostsBundle/Resources/views/comment/show.html.twig
@@ -30,7 +30,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('comment_index') }}">Back to the list</a>
+            <a href="{{ path('homepage') }}">Back to the list</a>
         </li>
         <li>
             <a href="{{ path('comment_edit', { 'id': comment.id }) }}">Edit</a>
